--- a/website/templates/Home.html
+++ b/website/templates/Home.html
@@ -13,9 +13,9 @@
           <select class="form-select" id="inputGroupSelect01" name="account">
             <option selected>Choose...</option>
             <option value="Jayanthi">Jayanthi</option>
-            <option value="Sugath">Sugath</option>
+
             <option value="Sajith">Sajith</option>
-            <option value="Madushan">Madushan</option>
+            <option value="Ishara">Ishara</option>
           </select>
         </div>
       </div>
