--- a/website/templates/Ishara.html
+++ b/website/templates/Ishara.html
@@ -147,7 +147,7 @@
     >
       <form action="delete" method="post">
         <input type="hidden" value="{{order['foid']}}" name="foid" />
-        <input type="hidden" value="Jayanthi" name="redirect_page" />
+        <input type="hidden" value="Ishara" name="redirect_page" />
         <button
           type="submit"
           class="btn-close"
