--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -47,7 +47,7 @@
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="/Jayanthi">Jayanthi</a></li>
                 <li><a class="dropdown-item" href="/Sajith">Sajith</a></li>
-                <li><a class="dropdown-item" href="/Madushan">Madushan</a></li>
+                <li><a class="dropdown-item" href="/Ishara">Ishara</a></li>
                 
                
                 
