--- a/website/templates/Sajith.html
+++ b/website/templates/Sajith.html
@@ -129,7 +129,7 @@
     <div
       class="col-md-2 d-flex align-items-center justify-content-center custom-column"
     >
-      <span class="badge text-bg-success">Success</span>
+      <span class="badge text-bg-danger">Pendin</span>
     </div>
 
     <div
