--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -14,7 +14,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">FOMS</a>
+        <a class="navbar-brand" href="/">FOMS</a>
         <button
           class="navbar-toggler"
           type="button"
