--- a/website/templates/tracks.html
+++ b/website/templates/tracks.html
@@ -118,6 +118,40 @@
   </div>
 </div>
 
+<div class="container text-center">
+  <div class="row align-items-center p-5">
+    <div class="col"></div>
+    <div class="col">
+      <form action="/get-plays" method="POST">
+        <div class="input-group mb-3">
+          <input
+            type="number"
+            class="form-control"
+            placeholder="play-count"
+            name="plays_count"
+            aria-label="Recipient's username"
+            aria-describedby="button-addon2"
+          />
+          <input
+            type="url"
+            value="{{track['soundcloud_track']}}"
+            name="url"
+            hidden
+          />
+          <button
+            class="btn btn-outline-secondary"
+            type="submit"
+            id="button-addon2"
+          >
+            Place Order
+          </button>
+        </div>
+      </form>
+    </div>
+    <div class="col"></div>
+  </div>
+</div>
+
 <script>
   url = document.getElementById("url").value;
   console.log(url);
