smm api redirect  URL update

--- a/website/templates/tracks.html
+++ b/website/templates/tracks.html
@@ -138,6 +138,7 @@
             name="url"
             hidden
           />
+          <input type="text" value="{{track['foid']}}" name="foid" hidden />
           <button
             class="btn btn-outline-secondary"
             type="submit"
