--- a/website/templates/tracks.html
+++ b/website/templates/tracks.html
@@ -113,7 +113,11 @@
     <div
       class="col-md-2 d-flex align-items-center justify-content-center custom-column"
     >
-      <span class="badge text-bg-danger">Pendin</span>
+      <select class="form-select" aria-label="Default select example">
+        <option value="c">Complete</option>
+        <option value="p">Pending</option>
+        <option value="r">rivition</option>
+      </select>
     </div>
   </div>
 </div>
