--- a/website/templates/Home.html
+++ b/website/templates/Home.html
@@ -33,6 +33,8 @@
             name="Fiverr_Oder_Number"
             required
           />
+          <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"
+            id="OderStatus" name="OderStatus" value="c" hidden />
         </div>
       </div>
     </div>
